--- a/index.html
+++ b/index.html
@@ -19,14 +19,36 @@
         <div id="section_1">
             <h1>Join our community</h1>
             <h2 class="subtitle">30-day, hassie-free money back guarantee</h2>
-            <p>Gain acess to our full library of tutorial along with expert code riviews.</p>
-            <p>Perfect for any developers who are serious about honing their skills</p>
+            <p class="text">Gain acess to our full library of tutorial along with expert code riviews.</p>
+            <p class="text">Perfect for any developers who are serious about honing their skills</p>
         </div>
-        <div id="section_2">
-            <h2 class="subtitle"> Monthly Subscription </p>
-            <div id="price">
-                <p id="money">$29</p>
-               <p>per month</p>
+        <div id="block_2">
+            <div id="section_2">
+                <h2 class="subtitle"> Monthly Subscription </p>
+           
+                <div id="price">
+                    <h3>$29</h3>
+                    <p>per month</p>
+                </div>
+
+                <div id="signUp">
+                    <p class="text">Full acess for less than $1 a day</p>
+                    <a id="button" href="#">Sign Up</a>
+                </div>    
+            </div>
+            <div id="section_3">
+                <h2 class="subtitle">Why Us</h2>
+                <p class="text">
+                    Tutotials by industry experts<br>
+                    Peer & expert code review<br>
+                    Coding exercises<br>
+                    Access to our GitHub repos<br>
+                    Community forum<br>
+                    Flashcard decks<br>
+                    New videos every week
+
+                </p>
+
             </div>
         </div>
     </div>
